--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -19,6 +18,16 @@
         android:theme="@style/AppTheme"
         tools:targetApi="33">
         <activity
+            android:name=".auth.session.MainActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.MySplash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".student.complaint.UserComplaint"
             android:exported="false" />
         <activity
@@ -33,11 +42,6 @@
         <activity
             android:name=".auth.signin.Login"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".auth.otp.PhoneVerification"
