--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'com.michalsvec:single-row-calednar:1.0.0'
     implementation "androidx.core:core-splashscreen:1.0.1"
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'androidx.browser:browser:1.5.0'
 
 
 }
